# azure-cosmos-db

./: .gitignore  Makefile  README.md  azure-cosmos-db-eio.opam  azure-cosmos-db-lwt.opam  azure-cosmos-db.opam  bisect.exclude  bitbucket-pipelines.yml  dockerfile.base  dockerfile.build  dune-project
.devcontainer/: Dockerfile  devcontainer.json  dockerfile
.github/workflows/: docs.yml  main.yml
doc/: app_config_tutorial.mld  cosmos_tutorial.mld  index.mld
docs/: dune  index.md
integration_test/: dune  jbuild  json_types.atd  test.ml
src/: Ocsigen_extra.ml  Ocsigen_extra.mli  azure-cosmos-db.opam  databases.ml  databases.mli  dune  jbuild  json_converter.atd  utility.ml
src/app_config/: app_config.ml  dune  json.atd
src/cosmos/: databases.ml  databases.mli  databases_core.ml  databases_intf.ml  dune  json_converter.atd  utility.ml
src/cosmos_eio/: databases.ml  databases.mli  dune
src/cosmos_lwt/: databases.ml  databases.mli  dune
src/cosmos_runner/: cosmos_runner.ml  dune
src/utilities/: dune  utilities.ml  utilities.mli  verb.ml
test/: dune  integration_test.ml  jbuild  test.ml  test_common.ml  test_utility.ml  users_test.ml
test/app_config/: test_app_config.ml
test/core/: batch_tests.ml  dune  integration_tests.ml  mock_auth.ml  mock_http.ml  mock_http.mli  mock_io.ml  mock_io.mli  mock_response.ml  mock_response.mli  mock_test_runner.ml  mock_tests.ml  permission_tests.ml  test_common_core.ml  test_cosmos_utility.ml  test_io_intf.ml  test_utilities.ml  users_tests.ml
test/cosmos/: integration_test.ml  permission_test.ml  test.ml_  test_cosmos_utility.ml  test_utility.ml  users_test.ml
test/eio/: dune  test.ml
test/lwt/: dune  test.ml
test/utilities/: dune  test.ml  test_common.ml  test_utilities.ml
