opam-version: "2.0"
name: "azure-cosmos-db-lwt"
license: "MIT"
synopsis: "Lwt backend for azure-cosmos-db"
description: """
Provides an Lwt-based backend for the Azure Cosmos DB interface.
"""
maintainer: "Morten Knaack <knaack@gmail>"
authors: "Morten Knaack <knaack@gmail>"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "3.21.0"}
  "azure-cosmos-db"
  "lwt"
  "lwt_ppx" {>="2.0.2"}
  "lwt_ssl"
  "ssl"
  "cohttp-lwt-unix"
  "alcotest-lwt" {with-test}
  "bisect_ppx" {with-test}
  "odoc" {with-doc}
]
conflicts: [ "result" {< "1.5"} ]
homepage: "https://github.com/mknaack/azure-cosmos-db"
bug-reports: "https://github.com/mknaack/azure-cosmos-db/issues"
dev-repo: "git+https://github.com/mknaack/azure-cosmos-db.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
x-maintenance-intent: [ "(latest)" ]
