opam-version: "2.0"
name: "azure-cosmos-db"
version: "0.1.0"
license: "MIT"
synopsis: "Azure cosmos db interface"
description: """
Provides an interface to the Azure Cosmos db.
"""
maintainer: "Morten Knaack <knaack@gmail>"
authors: "Morten Knaack <knaack@gmail>"
depends: [
  "ocaml" {>= "4.06.0"}
  "dune" {build}
  "lwt"
  "atdgen"
  "base64"
  "uri"
  "cohttp"
  "cohttp-lwt-unix"
  "alcotest-lwt" {with-test}
]
homepage: "https://bitbucket.org/knaack/azure-cosmos-db"
bug-reports: "https://bitbucket.org/knaack/azure-cosmos-db/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
 ]
