opam-version: "2.0"
name: "azure-cosmos-db"
version: "0.2.3"
license: "MIT"
synopsis: "Azure cosmos db interface"
description: """
Provides an interface to the Azure Cosmos db.
"""
maintainer: "Morten Knaack <knaack@gmail>"
authors: "Morten Knaack <knaack@gmail>"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "2.7.0"}
  "lwt"
  "lwt_ppx"
  "lwt_ssl"
  "ssl"
  "atdgen" {>= "2.0.0"}
  "base64" {>= "3.5.0"}
  "uri"
  "cohttp"
  "cohttp-lwt-unix"
  "cryptokit"
  "alcotest-lwt" {with-test}
  "bisect_ppx" {with-test}
]
conflicts: [ "result" {< "1.5"} ]
homepage: "https://bitbucket.org/knaack/azure-cosmos-db"
bug-reports: "https://bitbucket.org/knaack/azure-cosmos-db/issues"
dev-repo: "git+https://bitbucket.org/knaack/azure-cosmos-db.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
 ]
