opam-version: "2.0"
name: "azure-cosmos-db"
license: "MIT"
synopsis: "Azure cosmos db interface"
description: """
Provides an interface to the Azure Cosmos db.
"""
maintainer: "Morten Knaack <knaack@gmail>"
authors: "Morten Knaack <knaack@gmail>"
depends: [
  "ocaml" {>= "4.08.0"}
  "dune" {>= "3.21.0"}
  "atdgen" {>= "2.0.0"}
  "base64" {>= "3.5.0"}
  "uri"
  "cohttp"
  "cryptokit"
  "bisect_ppx" {with-test}
  "odoc" {with-doc}
]
conflicts: [ "result" {< "1.5"} ]
homepage: "https://github.com/mknaack/azure-cosmos-db"
bug-reports: "https://github.com/mknaack/azure-cosmos-db/issues"
dev-repo: "git+https://github.com/mknaack/azure-cosmos-db.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
x-maintenance-intent: [ "(latest)" ]