(library
  (name src)
  (public_name azure-cosmos-db)
  (libraries lwt yojson ocsigenserver netstring base64 uri atdgen)
  (flags (:standard -annot -bin-annot -w -32))
)

(rule
  (targets json_converter_j.ml
           json_converter_j.mli)
  (deps    json_converter.atd)
  (action  (run atdgen -j -j-std %{deps}))
)


(rule
  (targets json_converter_t.ml
           json_converter_t.mli)
  (deps    json_converter.atd)
  (action  (run atdgen -t %{deps}))
)

