(test
 (name test)
 (libraries azure-cosmos-db alcotest-lwt utilities)
 (flags
  (:standard -annot -short-paths))
 (preprocess
  (pps lwt_ppx)))

(include_subdirs unqualified)

(rule
 (targets json_j.ml json_j.mli)
 (deps json.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets json_t.ml json_t.mli)
 (deps json.atd)
 (action
  (run atdgen -t -j-std %{deps})))
