(library
 (name cosmos)
 (public_name azure-cosmos-db)
 (libraries yojson base64 uri atdgen-runtime cohttp cryptokit str utilities)
 (instrumentation
  (backend bisect_ppx --exclusions ../../bisect.exclude)
  (deps ../../bisect.exclude)))

(rule
 (targets json_converter_j.ml json_converter_j.mli)
 (deps json_converter.atd)
 (action
  (run atdgen -j -j-std %{deps})))

(rule
 (targets json_converter_t.ml json_converter_t.mli)
 (deps json_converter.atd)
 (action
  (run atdgen -t %{deps})))
